labs/postgressql/go-api-eks/security/allow-go-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-go-api
  namespace: dev

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: stacklaunch-api

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector: {}
